# Blogify-django

./: .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js
src/auth_app/: urls.py  views.py
src/blog/: settings.py  urls.py  views.py
src/blogapp/: settings.py
src/static/: input.css
src/templates/: base.html  homepage.html  settings.html  signin.html  signup.html
src/templates/components/: Blog.html  Footer.html  Navbar.html  Others.html  SideNav.html
